# play-samples

play-scala-bazel-compile-time-di-example/: .bazelrc  BUILD.bazel  WORKSPACE
play-scala-bazel-compile-time-di-example/conf/: application.conf
play-scala-bazel-compile-time-di-example/scripts/: test-sbt
play-scala-bazel-compile-time-di-example/test/: ServerSpec.scala
